[package]
name = "ordb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
num = "0.2.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_derive = "1.0"
aes-gcm = { version = "0.11.0-pre.1" }
bytemuck = "1.15"
