[package]
name = "ordb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.3"
rand = "0.8"
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3"
serde_derive = "1.0.215"
sha2 = { version = "0.11.0-pre.2" }
aes-gcm = { version = "0.11.0-pre.2" }
bytemuck = "1.19.0"
rayon = "1.5"
criterion = "0.4.0"

[[bench]]
name = "db_bench"
harness = false