[package]
name = "ordb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
bincode = "1.3"
serde_derive = "1.0.215"
sha2 = { version = "0.10.8" }
aes-gcm = { version = "0.10.3" }
bytemuck = "1.19.0"
rayon = "1.7"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "db_bench"
harness = false